Improved preseed to support UEFI.

--- a/src/images/preseed.cfg
+++ b/src/images/preseed.cfg
@@ -73,6 +73,7 @@ d-i user-setup/encrypt-home             boolean false
 
 # ====== Disk  ==============================================================
 d-i partman-auto/disk                   string /dev/vda
+d-i partman-efi/non_efi_system          boolean true
 d-i partman-basicfilesystems/no_swap    boolean false   # Disable "no swap" warning!
 # d-i partman/confirm_write_new_label     boolean false   # Repartition without warning!
 
@@ -84,6 +85,16 @@ d-i partman/choose_partition            select finish
 d-i partman-auto/method                 string regular
 d-i partman-auto/expert_recipe          string \
       boot-root ::                                                \
+              1 1 1 free                                          \
+                      $bios_boot{ }                               \
+                      method{ biosgrub }                          \
+                      label{ BIOS }                               \
+              .                                                   \
+              64 64 64 fat16                                      \
+                      $primary{ }                                 \
+                      method{ efi } format{ }                     \
+                      label{ EFI }                                \
+              .                                                   \
               16384 16384 -1 btrfs                                \
                       $primary{ } $bootable{ }                    \
                       method{ format } format{ }                  \
@@ -91,20 +102,6 @@ d-i partman-auto/expert_recipe          string \
                       use_filesystem{ } filesystem{ btrfs }       \
                       mountpoint{ / }                             \
               .                                                   \
-
-# ------ With EFI settings: ------
-#               1 1 1 free                                          \
-#                       $gptonly{ }                                 \
-#                       $primary{ }                                 \
-#                       $bios_boot{ }                               \
-#                       method{ biosgrub }                          \
-#               .                                                   \
-#               64 64 64 fat16                                      \
-#                       $gptonly{ }                                 \
-#                       $primary{ }                                 \
-#                       method{ efi } format{ }                     \
-#                       label{ EFI }                                \
-#               .                                                   \
 
 # ====== Mirror =============================================================
 d-i mirror/protocol                                 string http
@@ -130,11 +127,11 @@ d-i apt-setup/multiverse/source                     boolean true
 # Thomas Dreibholz's PPA:
 # !!! These lines have no effect -> https://ubuntuforums.org/showthread.php?t=2387570 !!!
 # Need to add PPA by late_command ...
-d-i apt-setup/restricted                            boolean false
-d-i apt-setup/local0/repository                     string http://ppa.launchpad.net/dreibh/ppa/ubuntu xenial main
-d-i apt-setup/local0/comment                        string Thomas Dreibholz's PPA
-d-i apt-setup/local0/source                         boolean true
-d-i apt-setup/local0/key                            string https://keyserver.ubuntu.com/pks/lookup?op=get&search=0x8A8EAF3E2F2E3BB5C75F48C1CCEB82DF916C56E0
+# d-i apt-setup/restricted                            boolean false
+# d-i apt-setup/local0/repository                     string http://ppa.launchpad.net/dreibh/ppa/ubuntu xenial main
+# d-i apt-setup/local0/comment                        string Thomas Dreibholz's PPA
+# d-i apt-setup/local0/source                         boolean true
+# d-i apt-setup/local0/key                            string https://keyserver.ubuntu.com/pks/lookup?op=get&search=0x8A8EAF3E2F2E3BB5C75F48C1CCEB82DF916C56E0
 
 # Package settings:
 tasksel tasksel/first                               multiselect ubuntu-server
