--- a/src/images/preseed.cfg
+++ b/src/images/preseed.cfg
@@ -72,7 +72,7 @@ d-i passwd/user-default-groups          string  adm cdrom sudo dip plugdev lpadm
 d-i user-setup/encrypt-home             boolean false
 
 # ====== Disk  ==============================================================
-d-i partman-auto/disk                   string /dev/vda
+d-i partman-auto/disk                   string /dev/sda
 d-i partman-efi/non_efi_system          boolean true
 d-i partman-basicfilesystems/no_swap    boolean false   # Disable "no swap" warning!
 # d-i partman/confirm_write_new_label     boolean false   # Repartition without warning!
@@ -110,9 +110,9 @@ d-i mirror/http/hostname                            string no.archive.ubuntu.com
 d-i mirror/http/directory                           string /ubuntu
 
 # ====== Grub ===============================================================
-grub-pc grub-pc/install_devices                     string /dev/vda
+grub-pc grub-pc/install_devices                     string /dev/sda
 d-i grub-pc/install_devices_empty                   boolean yes
-d-i grub-installer/bootdev                          string /dev/vda
+d-i grub-installer/bootdev                          string /dev/sda
 d-i grub-installer/only_debian                      boolean true
 d-i grub-installer/with_other_os                    boolean true
 
