--- a/src/images/preseed.cfg
+++ b/src/images/preseed.cfg
@@ -72,36 +72,37 @@ d-i passwd/user-default-groups          string  adm cdrom sudo dip plugdev lpadm
 d-i user-setup/encrypt-home             boolean false
 
 # ====== Disk  ==============================================================
-d-i partman-auto/disk                   string /dev/sda
-d-i partman-efi/non_efi_system          boolean true
 d-i partman-basicfilesystems/no_swap    boolean false   # Disable "no swap" warning!
-# d-i partman/confirm_write_new_label     boolean false   # Repartition without warning!
 
 d-i partman/confirm                     boolean true
 d-i partman/confirm_write_new_label     boolean true
 d-i partman/confirm_nooverwrite         boolean true
 d-i partman/choose_partition            select finish
 
+d-i partman-auto/disk                   string /dev/sda
 d-i partman-auto/method                 string regular
+d-i partman-auto/choose_recipe          string root
 d-i partman-auto/expert_recipe          string \
-      boot-root ::                                                \
+      root ::                                                     \
               1 1 1 free                                          \
                       $bios_boot{ }                               \
                       method{ biosgrub }                          \
                       label{ BIOS }                               \
               .                                                   \
-              64 64 64 fat16                                      \
+              64 64 64 fat32                                      \
                       $primary{ }                                 \
                       method{ efi } format{ }                     \
                       label{ EFI }                                \
               .                                                   \
-              16384 16384 -1 btrfs                                \
+              6144 16384 -1 btrfs                                 \
                       $primary{ } $bootable{ }                    \
                       method{ format } format{ }                  \
                       label{ Root }                               \
                       use_filesystem{ } filesystem{ btrfs }       \
                       mountpoint{ / }                             \
               .                                                   \
+# See https://www.bishnet.net/tim/blog/2015/01/29/understanding-partman-autoexpert_recipe/
+# for details on configuring partman-auto/expert_recipe!
 
 # ====== Mirror =============================================================
 d-i mirror/protocol                                 string http
