--- a/src/images/preseed.cfg
+++ b/src/images/preseed.cfg
@@ -65,8 +65,8 @@ d-i passwd/root-login                   boolean false
 d-i passwd/make-user                    boolean true
 d-i passwd/user-fullname                string  NorNet Praesum Presum
 d-i passwd/username                     string  nornetpp
-d-i passwd/user-password-crypted        password $1$hZheDuz6$OLw7PO.t/y4eLVtMeW8eF0
-# NOTE: Example to add crypted password: echo "my password" | mkpasswd -s -H MD5
+d-i passwd/user-password-crypted        password $6$rounds=7466$SiAs9eNkQiq84Vj$Kz4tNjeR5Bb9Uk6GHu.4Y.rF4qqRyh9zkV4Bwrx./MVmtBThjnZMNjoAvj7TWDevzDVF8xmXL.to9ImJGDlca1
+# NOTE: Example to add crypted password: echo "my password" | mkpasswd -s -m sha-512 -R 7466
 d-i passwd/user-uid                     string  1000
 d-i passwd/user-default-groups          string  adm cdrom sudo dip plugdev lpadmin sambashare
 d-i user-setup/encrypt-home             boolean false
@@ -85,11 +85,14 @@ d-i partman-auto/choose_recipe          string root
 d-i partman-auto/expert_recipe          string \
       root ::                                                     \
               1 1 1 free                                          \
+                      $gptonly{ }                                 \
+                      $primary{ }                                 \
                       $bios_boot{ }                               \
                       method{ biosgrub }                          \
                       label{ BIOS }                               \
               .                                                   \
               64 64 64 fat32                                      \
+                      $gptonly{ }                                 \
                       $primary{ }                                 \
                       method{ efi } format{ }                     \
                       label{ EFI }                                \
