--- a/src/images/preseed.cfg
+++ b/src/images/preseed.cfg
@@ -79,24 +79,13 @@ d-i partman/confirm_write_new_label     boolean true
 d-i partman/confirm_nooverwrite         boolean true
 d-i partman/choose_partition            select finish
 
+# See https://www.bishnet.net/tim/blog/2015/01/29/understanding-partman-autoexpert_recipe/
+# for details on configuring partman-auto/expert_recipe!
 d-i partman-auto/disk                   string /dev/sda
 d-i partman-auto/method                 string regular
 d-i partman-auto/choose_recipe          string root
 d-i partman-auto/expert_recipe          string \
       root ::                                                     \
-              1 1 1 free                                          \
-                      $gptonly{ }                                 \
-                      $primary{ }                                 \
-                      $bios_boot{ }                               \
-                      method{ biosgrub }                          \
-                      label{ BIOS }                               \
-              .                                                   \
-              64 64 64 fat32                                      \
-                      $gptonly{ }                                 \
-                      $primary{ }                                 \
-                      method{ efi } format{ }                     \
-                      label{ EFI }                                \
-              .                                                   \
               6144 16384 -1 btrfs                                 \
                       $primary{ } $bootable{ }                    \
                       method{ format } format{ }                  \
@@ -104,8 +93,21 @@ d-i partman-auto/expert_recipe          string \
                       use_filesystem{ } filesystem{ btrfs }       \
                       mountpoint{ / }                             \
               .                                                   \
-# See https://www.bishnet.net/tim/blog/2015/01/29/understanding-partman-autoexpert_recipe/
-# for details on configuring partman-auto/expert_recipe!
+
+# Additional partitions for GPT/EFI:
+#               1 1 1 free                                          \
+#                       $gptonly{ }                                 \
+#                       $primary{ }                                 \
+#                       $bios_boot{ }                               \
+#                       method{ biosgrub }                          \
+#                       label{ BIOS }                               \
+#               .                                                   \
+#               64 64 64 fat32                                      \
+#                       $gptonly{ }                                 \
+#                       $primary{ }                                 \
+#                       method{ efi } format{ }                     \
+#                       label{ EFI }                                \
+#               .                                                   \
 
 # ====== Mirror =============================================================
 d-i mirror/protocol                                 string http
