New release melodic-nornet-0.7.1.

--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: melodic-nornet
 Section: net
 Priority: optional
-Maintainer: Thomas Dreibholz <dreibh@simula.no>
+Maintainer: Thomas Dreibholz <dreibh@iem.uni-due.de>
 Homepage: https://www.melodic.cloud/
 Build-Depends: cmake (>= 3.0.2) | cmake3,
                debhelper (>= 9),
