--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ PROJECT(melodic-nornet LANGUAGES C)
 
 SET(BUILD_MAJOR "0")
 SET(BUILD_MINOR "7")
-SET(BUILD_PATCH "1~rc1")
+SET(BUILD_PATCH "1")
 SET(BUILD_VERSION ${BUILD_MAJOR}.${BUILD_MINOR}.${BUILD_PATCH})
 
 
