--- a/packaging.conf
+++ b/packaging.conf
@@ -3,7 +3,7 @@
 # ---------------------------------------------------------------------------
 MAKE_DIST="cmake -DCMAKE_INSTALL_PREFIX=/usr . && make dist"
 NOT_TARGET_DISTRIBUTIONS="lucid precise trusty"   # <<-- Distrubutions which are *not* supported!
-MAINTAINER="Thomas Dreibholz <dreibh@simula.no>"
+MAINTAINER="Thomas Dreibholz <dreibh@iem.uni-due.de>"
 DEBIAN_LAST_ENTRY=""
 UBUNTU_LAST_ENTRY=""
 SKIP_PACKAGE_SIGNING=0   # <<-- Must be set to 0 (=off) for PPA upload!
