--- a/.travis.yml
+++ b/.travis.yml
@@ -258,14 +258,14 @@ matrix:
 
 
 before_install:
-  - travis_wait 60 ci/before-install
+  - travis_wait 60 travis_retry ci/before-install
 
 install:
-  - travis_wait 60 ci/install
+  - travis_wait 60 travis_retry ci/install
 
 script:
-  - travis_wait 60 ci/build
+  - travis_wait 60 travis_retry ci/build
   - |
     if [ "${VARIANT}" != "debian" ] ; then   # There is no Debian PPA for the required nornet-* packages!
-       travis_wait 60 ci/test
+       travis_wait 60 travis_retry ci/test
     fi
