--- a/debian/control
+++ b/debian/control
@@ -91,11 +91,11 @@ Depends: cinder-api,
          nova-novncproxy,
          nova-scheduler,
          openstack-dashboard,
-         python-glanceclient,
-         python-memcache,
-         python-neutronclient,
-         python-openstackclient,
-         python-pymysql,
+         python3-glanceclient | python-glanceclient,
+         python3-memcache | python-memcache,
+         python3-neutronclient | python-neutronclient,
+         python3-openstackclient | python-openstackclient,
+         python3-pymysql | python-pymysql,
          rabbitmq-server,
          ${misc:Depends},
          ${shlibs:Depends}
