--- a/debian/control
+++ b/debian/control
@@ -87,7 +87,7 @@ Depends: cinder-api,
          neutron-server,
          nova-api,
          nova-conductor,
-         nova-consoleauth,
+         nova-console,
          nova-novncproxy,
          nova-scheduler,
          openstack-dashboard,
