--- a/debian/control
+++ b/debian/control
@@ -15,6 +15,7 @@ Build-Depends: cmake (>= 3.3) | cmake3,
                libfile-fcntllock-perl,
                libimage-exiftool-perl
 Standards-Version: 4.5.0.2
+Rules-Requires-Root: no
 Vcs-Git: https://github.com/simula/melodic-nornet.git
 Vcs-Browser: https://github.com/simula/melodic-nornet/tags
 
