--- a/src/tests/warszawa.nntb.no.yaml
+++ b/src/tests/warszawa.nntb.no.yaml
@@ -3,11 +3,11 @@ network:
   renderer: networkd
   ethernets:
     ens3:
-      dhcp4: yes
-      accept-ra: yes
+      dhcp4: no
+      accept-ra: no
       addresses:
-        - 10.255.1.108/24
-        - 2001:700:4100:ff01:ffff::2/64
+        - 10.255.1.124/24
+        - 2001:700:4100:ff01:ffff::d/64
       routes:
         - to: 10.0.0.0/8
           via: 10.255.1.1
