--- a/src/background/CMakeLists.txt
+++ b/src/background/CMakeLists.txt
@@ -30,7 +30,7 @@
 
 
 #############################################################################
-# INITIALISE
+#### INITIALISE                                                          ####
 #############################################################################
 
 CMAKE_MINIMUM_REQUIRED(VERSION 3.3)
@@ -39,7 +39,7 @@ INCLUDE(Settings.input)
 
 
 #############################################################################
-# INSTALLATION_DIRECTORIES
+#### INSTALLATION_DIRECTORIES                                            ####
 #############################################################################
 
 # See: https://cmake.org/cmake/help/v3.0/module/GNUInstallDirs.html
@@ -47,7 +47,7 @@ INCLUDE(GNUInstallDirs)
 
 
 #############################################################################
-# OPTIONS
+#### OPTIONS                                                             ####
 #############################################################################
 
 OPTION(FLAT_DIRECTORY_STRUCTURE "Use flat directory structure" ${TDD_FLAT_DIRECTORY_STRUCTURE})
@@ -77,7 +77,7 @@ ENDIF()
 
 
 #############################################################################
-# REQUIREMENTS
+#### REQUIREMENTS                                                        ####
 #############################################################################
 
 INCLUDE(FindUnixCommands)
@@ -160,7 +160,7 @@ ENDIF()
 
 
 #############################################################################
-# REQUIREMENTS
+#### REQUIREMENTS                                                        ####
 #############################################################################
 
 IF(TDD_ADD_DIST_TARGET)
@@ -176,7 +176,7 @@ ENDIF()
 
 
 #############################################################################
-# BUILD TARGETS
+#### BUILD TARGETS                                                       ####
 #############################################################################
 
 # NOTE: The following build rules use custom commands. They need additional
@@ -614,7 +614,7 @@ ENDFOREACH()
 
 
 #############################################################################
-# SOURCE DIRECTORIES
+#### SOURCE DIRECTORIES                                                  ####
 #############################################################################
 
 IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/grub)
