--- a/src/cloud-init/CMakeLists.txt
+++ b/src/cloud-init/CMakeLists.txt
@@ -1,5 +1,5 @@
 #############################################################################
-# EXAMPLE CONFIGURATION FILES
+#### EXAMPLE CONFIGURATION FILES                                         ####
 #############################################################################
 
 INSTALL(FILES cloud.cfg DESTINATION ${CMAKE_INSTALL_DATADIR}/melodic-nornet)
