URL change from UDE to NNTB.

--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: melodic-nornet
 Section: net
 Priority: optional
-Maintainer: Thomas Dreibholz <dreibh@iem.uni-due.de>
+Maintainer: Thomas Dreibholz <thomas.dreibholz@gmail.com>
 Homepage: https://www.melodic.cloud/
 Build-Depends: cmake (>= 3.3) | cmake3,
                debhelper (>= 9),
