Packaging clean-ups.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,12 +16,12 @@
 #
 # Contact: dreibh@simula.no
 
-CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
+CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
 PROJECT(melodic-nornet LANGUAGES C)
 
 SET(BUILD_MAJOR "1")
 SET(BUILD_MINOR "1")
-SET(BUILD_PATCH "8")
+SET(BUILD_PATCH "9~rc1")
 SET(BUILD_VERSION ${BUILD_MAJOR}.${BUILD_MINOR}.${BUILD_PATCH})
 
 
