--- a/debian/control
+++ b/debian/control
@@ -3,8 +3,8 @@ Section: net
 Priority: optional
 Maintainer: Thomas Dreibholz <thomas.dreibholz@gmail.com>
 Homepage: https://www.melodic.cloud/
-Build-Depends: cmake (>= 3.3) | cmake3,
-               debhelper (>= 9),
+Build-Depends: cmake,
+               debhelper (>= 12),
                fonts-dejavu,
                fonts-noto-cjk,
                fonts-noto-hinted,
