--- a/debian/control
+++ b/debian/control
@@ -3,6 +3,8 @@ Section: net
 Priority: optional
 Maintainer: Thomas Dreibholz <thomas.dreibholz@gmail.com>
 Homepage: https://www.melodic.cloud/
+Vcs-Git: https://github.com/simula/melodic-nornet.git
+Vcs-Browser: https://github.com/simula/melodic-nornet
 Build-Depends: cmake,
                debhelper (>= 12),
                fonts-dejavu,
@@ -14,7 +16,7 @@ Build-Depends: cmake,
                gsfonts,
                libfile-fcntllock-perl,
                libimage-exiftool-perl
-Standards-Version: 4.6.2
+Standards-Version: 4.7.0
 Rules-Requires-Root: no
 
 Package: melodic-management
